--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       Case Problem 1
 
       Marlin Internet Pricing
-      Author: 
-      Date:   
+      Author: Gabriel Hernandez     
+      Date:  12/10/18
 
-      Filename:   mi_pricing.html
+      Filename:   index.html
 
    -->
    
@@ -18,7 +18,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>Marlin Internet</title>
    <link href="mi_reset.css" rel="stylesheet" />
-   <link href="mi_styles.css" rel="stylesheet" />          
+   <link href="mi_styles.css" rel="stylesheet" />
+   <link rel="stylesheet" href="mi_tables.css" />          
 </head>
 
 <body>
@@ -46,9 +47,30 @@
          We provide more than fast access. Take advantage of our 24/7 customer support
          (personal help is <em>always</em> on the line), free security tools, email accounts
          for the whole family, and exclusive online content.</p>
-         
+      <table id="pricing">
+            <colgroup>
+                  <col id="firstCol" />
+                  <col class="dataCols" span="4" />
+            </colgroup>
+            <thead>
+                  <tr>
+                        <th rowspan="2">select a plan</th>
+                        <th>Starter</th>
+                        <th>Prime</th>
+                        <th>Prime Plus</th>
+                        <th>Ultra</th>
+                  </tr>
+                  <tr>
+                        <th>$19.95 <br> per month</th>
+                        <th>$29.95 <br> per month</th>
+                        <th>$45.95 <br> per month</th>
+                        <th>$69.95 <br> per month</th>
+                  </tr>
+            </thead>
+      </table>     
       
    </article>
+   
    
    <footer>
       <nav>
