--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
          We provide more than fast access. Take advantage of our 24/7 customer support
          (personal help is <em>always</em> on the line), free security tools, email accounts
          for the whole family, and exclusive online content.</p>
+
+         <!-- Anything that will be put in the table will be placed within the table element-->
       <table id="pricing">
+            <!-- Here all the columns that are in the table are grouped and have id's to apply style later.-->
             <colgroup>
                   <col id="firstCol" />
+                  <!-- Here the second column group will span four columns. -->
                   <col class="dataCols" span="4" />
             </colgroup>
             <thead>
@@ -67,6 +71,53 @@
                         <th>$69.95 <br> per month</th>
                   </tr>
             </thead>
+            <tfoot>
+                  <tr>
+                        <th>Summary</th>
+                        <td>Just the speed you need to send emails, download map directions, and search the Internet for restaurant reviews.</td>
+                        <td> A great speed at a great price for the family: kids can play games, adults can pay bills, and everyone can surf at the same time.</td>
+                        <td>Super speeds for multiple tasks that require more broadband capacity; ideal for gamers who need fast response times.</td>
+                        <td>Perfect for a small business running multiple media streams, demanding reduced lag time and fast data delivery.</td>
+                  </tr>
+                  <tbody>
+                        <tr>
+                            <th>Download Speed</th>
+                            <td>3 Mbps</td>
+                            <td>15 Mbps</td>
+                            <td>25 Mbps</td>
+                            <td>50 Mbps</td>  
+                        </tr>
+                        <tr>
+                            <th>Upload Speed</th>
+                            <td>512 Kbps</td>
+                            <td>6 Kbps</td>
+                            <td>10 Kbps</td>
+                            <td>20 Kbps</td>
+                        </tr>
+                        <tr>
+                            <th>Cloud Storage</th>
+                            <td>2 GB</td>
+                            <td>6 GB</td>
+                            <td>15 GB</td>
+                            <td>40 GB</td>
+                        </tr>
+                        <tr>
+                            <th>E-mail Accounts</th>
+                            <td>2 Accounts</td>  
+                            <td>3 Accounts</td>  
+                            <td>5 Accounts</td>  
+                            <td>10 Accounts</td> 
+                            
+                        </tr>
+                        <tr>
+                            <th>24/7 Support</th> 
+                            <td>Yes</td>
+                            <td>Yes</td>
+                            <td>Yes</td>
+                            <td>Yes</td>  
+                        </tr>                            
+                  </tbody>
+            </tfoot>
       </table>     
       
    </article>
