Added another comment
Added one more comment.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                   <!-- Here the second column group will span four columns. -->
                   <col class="dataCols" span="4" />
             </colgroup>
+            <!-- The thead consists of the main headers on the table -->
             <thead>
                   <tr>
                         <th rowspan="2">select a plan</th>
